# Bookmark-intelligence

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  alembic.ini  clean_bookmarks.py  docker-compose.yml  pyproject.toml
.claude/: README.md
.claude/commands/: implement.md  plan.md  research.md
alembic/: env.py
config/: ai_settings.yaml  extractors.yaml  settings.yaml
docs/: README.md  architecture.md  features.md  market.md  overview.md  reference.md  roadmap.md  run.md
docs/archive/: spec-v1.md
docs/dev/: DATABASE_SETUP.md  enhancements-comprehensive-ai-extraction.md  gpt-5-2-model-note.md
docs/dev/plans/: 2025-10-29-refactor-composable-pipeline.md  2025-12-17-week2-ai-processing.md
frontend/: index.html
frontend/src/: App.jsx
scripts/: process_ai.py  process_bookmarks.py
specs/001-mvp-foundation/: spec.md
specs/001-mvp-foundation/checklists/: requirements.md
specs/002-bootstrap-import/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bootstrap-import/checklists/: requirements.md
specs/002-bootstrap-import/contracts/: auth.yaml  bookmarks.yaml  clusters.yaml  import.yaml  projects.yaml
src/app/: main.py
src/app/core/: __init__.py  config.py  database.py
src/app/models/: __init__.py  bookmark.py  import_job.py
src/bookmark_intelligence/: __init__.py
src/bookmark_intelligence/ai/: __init__.py  clustering.py  embedding_service.py  folder_recommender.py  project_suggester.py  tagging_service.py
src/bookmark_intelligence/analyzers/: __init__.py  analyzers.py
src/bookmark_intelligence/extractors/: __init__.py  extractors.py
src/bookmark_intelligence/models/: __init__.py  bookmark.py  schemas.py
src/bookmark_intelligence/parsers/: __init__.py  html_parser.py
tests/: __init__.py  test_extractors.py  test_parsers.py
tests/fixtures/: sample_bookmarks.html
(+7 files in other folders)
