
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark-intelligence"
version = "0.1.0"
description = "Clean and format bookmarks for AI and database use"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "html5lib>=1.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bookmark_intelligence"]
