
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark-intelligence"
version = "0.1.0"
description = "Clean and format bookmarks for AI and database use"
requires-python = ">=3.13"
dependencies = [
    # Parsing & Data
    "beautifulsoup4>=4.12.0",
    "html5lib>=1.1",
    "pyyaml>=6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "click>=8.0",

    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-multipart>=0.0.9",

    # Database (Modern Async Stack)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.31.0,<0.32.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    # Testing (Modern FastAPI Stack)
    "pytest>=8.3.0",
    "anyio>=4.6.0",  # Includes pytest plugin for async testing
    "pytest-cov>=4.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.8.0",
    "polyfactory>=2.16.0",

    # Code Quality
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bookmark_intelligence"]
